# rls-analysis

./: Cargo.toml  README.md
benches/: std_api_crate.rs
examples/: print-crate-id.rs
src/: analysis.rs  compiler_message.rs  fstq.rs  lib.rs  loader.rs  lowering.rs  raw.rs  search_span.rs  symbol_query.rs  util.rs
src/listings/: mod.rs
src/test/: mod.rs
test_data/: make_data.sh
test_data/rls-analysis/: libderive_new-9c31cb35b39c6cf3.json  libderive_new-d794dc145b37cf62.json  libderive_new-f357538a07611acb.json  libdtoa-76ebb504ac31c05f.json  libdtoa-d8f1f341c06f4f43.json  libitoa-58ab3e11c7b36cd3.json  libitoa-64ca65e744a0e081.json  liblog-1832710545ff9d45.json  liblog-1ce22d3a92f37841.json  liblog-bf16bb9a4912b11d.json  liblog-d4c0e5c2504fbbea.json  libnum_traits-92bb90166cd1857c.json  libnum_traits-ba977ae2944b0245.json  libpost_expansion-fc2d2c9ec7a85bbc.json  libquote-3ac49720d4820326.json  libquote-9882ce675b74d9ff.json  libquote-9c320a2bea6f7eb7.json  libquote-c2392a10f083f637.json  libquote-dd8bb573584d368e.json  librls_analysis-1f6a7808a3abff06.json  librls_analysis-7112b8ec43a93c85.json  librls_analysis-f7c7216d22b17958.json  librls_analysis.json  librls_data-b0358edab5ccd33c.json  librls_data-c632caeb3a7db3c1.json  librls_span-3037c86ab62b5ca6.json  librls_span-4643d2704161bed8.json  librls_span-d8b9db2b078a2847.json  librustc_serialize-03b62901d97343ea.json  librustc_serialize-3561541d79c18212.json  libserde-1de6d5304e5bf032.json  libserde-679fbb066ad271c4.json  libserde_codegen-0a28db66ebd84acf.json  libserde_codegen-500d8e25437c1cd2.json  (+15 more)
(+28 files in other folders)
