[package]
name = "rls-analysis"
version = "0.1.0"
authors = ["Nick Cameron <ncameron@mozilla.com>"]

[dependencies]
rustc-serialize = "0.3"
log = "0.3"
rls-data = { git = "https://github.com/nrc/rls-data" }
rls-span = { git = "https://github.com/nrc/rls-span" }

[dev-dependencies]
derive-new = "0.3"
